@@ -6,6 +6,9 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.37.0
 
+              pnmcrop: work on multi-image stream.
+              Thanks Erik Auerswald <auerswal@unix-ag.uni-kl.de>.
+
               pnmtopng: fix transparency optimization on PPM input.
     
               pnmrotate: fix -background option with PGM/PBM input.
